unpackaged/main/default/objects/CampaignMember/fields/conference360__Attendee__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When the &quot;Invite Attendee&quot; button is clicked, an attendee record is created for this campaign member. If the attendee registers, the campaign member&#39;s status updates to &quot;Invited&quot;.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>CampaignMember</relationshipLabel>
    <relationshipName>CampaignMember</relationshipName>
    <type>Lookup</type>
</CustomField>