unpackaged/main/default/objects/CampaignMember/fields/First_Associated_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Associated_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Associated Date</label>
    <type>Date</type>
</CustomField>