unpackaged/main/default/objects/CampaignMember/fields/simplesms__DoNotSMS__c.field-meta.xml
<CustomField>
    <fullName>simplesms__DoNotSMS__c</fullName>
    <formula>IF(
  ISBLANK(ContactId),
  Lead.simplesms__DoNotSMS__c,
  Contact.simplesms__DoNotSMS__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoNotSMS</label>
    <type>Checkbox</type>
</CustomField>