unpackaged/main/default/objects/CampaignMember/fields/traa_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>traa_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup determines the opportunity that a campaign member is related to. This field will be auto-populated on lead conversion</description>
    <inlineHelpText>Field should only be populated on lead conversion or if the individual is already a contact record.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>traa_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>